--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Hello World</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body> 
     <nav>
         <ul>
-            <li> <a href="stream-one.html">Stream One</a> </li>
-            <li> <a href="stream-two.html">Stream Two</a></li>
+            <li><a href="index.html">Stream One</a></li>
+            <li><a href="stream-two.html">Stream Two</a></li>
             <li><a href="stream-three.html">Stream Three </a></li>
         </ul>
     </nav>
